# alibaba-v2-api

./: .env.example  .gitignore  INTEGRATION_TEST_REFACTOR.md  README.md  pyproject.toml
docs/: alibaba-api-integration-v2.md  api-differences.md
specs/: architecture.md  implementation-progress.md  prd.md  project_brief.md  tech_stack.md
specs/stories/: _index.md
specs/stories/epic_01_setup/: story_001.md  story_002.md  story_003.md  story_004.md
specs/stories/epic_02_auth/: story_005.md  story_006.md  story_007.md
specs/stories/epic_03_products/: story_008.md  story_009.md  story_010.md  story_011.md  story_012.md
specs/stories/epic_04_shipping/: story_013.md  story_014.md  story_015.md
specs/stories/epic_05_orders/: story_017.md  story_018.md  story_019.md  story_020.md  story_021.md  story_022.md
specs/stories/epic_06_integration/: story_023.md  story_024.md  story_025.md  story_026.md
src/alibaba_api/: __init__.py  auth.py  client.py  config.py  exceptions.py  orders.py  products.py  shipping.py  signing.py
src/alibaba_api/models/: __init__.py  auth.py  order.py  shipping.py
src/alibaba_cli/: __init__.py  cli.py  client.py  config.py  exceptions.py  output.py  signing.py
src/alibaba_cli/commands/: auth.py  order.py  product.py  shipping.py
src/alibaba_cli/models/: __init__.py  auth.py  product.py
tests/: __init__.py  conftest.py
tests/integration/: test_auth.py  test_low_level.py  test_orders.py  test_products.py  test_shipping.py
tests/unit/: test_client.py  test_signing.py
